--- a/pallets/manta-pay/Cargo.toml
+++ b/pallets/manta-pay/Cargo.toml
@@ -56,6 +56,7 @@ std = [
   "sp-runtime/std",
   "sp-std/std",
   "manta-primitives/std",
+  "hex-literal",
 ]
 
 # Precompute Benchmark Transactions
@@ -77,6 +78,7 @@ precompute-coins = [
 [dependencies]
 # utils
 anyhow = { version = "1.0.55", optional = true }
+hex-literal = { version = '0.3.4', optional = true }
 indoc = { version = "1.0.3", optional = true, default-features = false }
 rand_chacha = { version = "0.3.1", optional = true, default-features = false }
 tempfile = { version = "3.3.0", optional = true }
